fix article cards spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,7 @@ a {
 .show-element {
   display: block;
 }
+
+p.article-card-desc {
+  margin-top: 1rem;
+}
